<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.group8</groupId>
  <artifactId>javasimd</artifactId>
  <version>1.0-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <build>
    <plugins>
      <!-- enable incubator Vector API -->
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>21</release>
          <compilerArgs>
            <arg>--add-modules</arg><arg>jdk.incubator.vector</arg>
            <!-- if you need reflection access: -->
            <arg>--add-opens</arg><arg>java.base/java.lang=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <!-- to run the demo main class with mvn exec:java -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mainClass>com.group8.pison.demo.PisonDemo</mainClass>
          <commandlineArgs/>
          <arguments>
            <argument>--add-modules</argument><argument>jdk.incubator.vector</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
